--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -151,6 +151,9 @@ $spaceremamounts: (0.06rem, 0.13rem, 0.19rem, 0.3rem, 0.4rem, 0.5rem, 0.6rem, 0.
   .height-#{$space}-px {
     height: #{$space}px !important;
   }
+  .height-#{$space}-em {
+    height: #{$space}em !important;
+  }
   .w-vw-#{$space} {
     width: #{$space}vw !important;
   }
