--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -401,3 +401,21 @@ ngx-mat-drp-picker-overlay {
 .actv-btn.active {
   font-weight: 500 !important;
 }
+
+.label-font-size {
+  .mat-form-field-label-wrapper {
+    font-size: 14px !important;
+  }
+}
+
+.inline-flex {
+  display: inline-flex;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.align-center {
+  align-items: center;
+}
