--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -100,7 +100,12 @@
 
             <ng-container matColumnDef="suppliername">
               <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-              <td mat-cell *matCellDef="let element">{{ element.supplier_name}}</td>
+              <td mat-cell *matCellDef="let element" class="pt-2">
+                <span class="supplier-name">{{ element.supplier_name}}</span>
+                <span class="d-block supplier-rates">
+                  <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
+                </span>
+              </td>
             </ng-container>
 
             <!-- Name Column -->
