--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -62,7 +62,7 @@
           </mat-radio-button>
         </mat-radio-group>
         <span class="supplier-name">{{ element.supplier_name }}</span>
-        <span class="d-block supplier-rates rfq-aupplier-rates">
+        <span class="d-block supplier-rates rfq-supplier-rates po-supplier-rates">
           <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
         </span>
       </td>
