--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -53,7 +53,7 @@
       <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i" class="pt-2">
         <mat-checkbox #ch [checked]="element.checked" (change)="valueChange(element, ch, i)"> </mat-checkbox>
         <span class="supplier-name">{{ element.supplier_name }}</span>
-        <span class="d-block supplier-rates rfq-aupplier-rates">
+        <span class="d-block supplier-rates rfq-supplier-rates">
           <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
         </span>
       </td>
