--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -117,19 +117,19 @@
               </span>
   
               <fieldset class="rating">
-                <input type="radio" [name]="inputName" value="5" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 5) : (rating===5)" />
+                <input type="radio" [name]="cardData.supplierAddress.supplierId" value="5" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 5) : (rating===5)" />
                 <label title="1" (click)='checkRating(5)'>5</label>
               
-                <input type="radio" [name]="inputName" value="4" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 4) : (rating===4)" />
+                <input type="radio" [name]="cardData.supplierAddress.supplierId" value="4" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 4) : (rating===4)" />
                 <label title="2" (click)='checkRating(4)'>4</label>
               
-                <input type="radio" [name]="inputName" value="3" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 3) : (rating===3)" />
+                <input type="radio" [name]="cardData.supplierAddress.supplierId" value="3" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 3) : (rating===3)" />
                 <label title="3" (click)='checkRating(3)'>3</label>
               
-                <input type="radio" [name]="inputName" value="2" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 2) : (rating===2)" />
+                <input type="radio" [name]="cardData.supplierAddress.supplierId" value="2" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 2) : (rating===2)" />
                 <label title="4" (click)='checkRating(2)'>2</label>
               
-                <input type="radio" [name]="inputName" value="1" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 1) : (rating===1)" />
+                <input type="radio" [name]="cardData.supplierAddress.supplierId" value="1" [checked]="cardData.sellerPORating ? (cardData.sellerPORating === 1) : (rating===1)" />
                 <label title="5" (click)='checkRating(1)'>1</label>
               </fieldset>          
   
