--- a/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
+++ b/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
@@ -11,19 +11,19 @@
 
       <div class="d-flex justify-content-center supplier-ratings">
         <fieldset class="rating">
-          <input type="radio" [name]="inputName" value="5" [checked]="rating===5" />
+          <input type="radio" [name]="supplierId" value="5" [checked]="rating===5" />
           <label title="1" (click)='checkRating(5)'>5</label>
 
-          <input type="radio" [name]="inputName" value="4" [checked]="rating===4" />
+          <input type="radio" [name]="supplierId" value="4" [checked]="rating===4" />
           <label title="2" (click)='checkRating(4)'>4</label>
 
-          <input type="radio" [name]="inputName" value="3" [checked]="rating===3" />
+          <input type="radio" [name]="supplierId" value="3" [checked]="rating===3" />
           <label title="3" (click)='checkRating(3)'>3</label>
 
-          <input type="radio" [name]="inputName" value="2" [checked]="rating===2" />
+          <input type="radio" [name]="supplierId" value="2" [checked]="rating===2" />
           <label title="4" (click)='checkRating(2)'>2</label>
 
-          <input type="radio" [name]="inputName" value="1" [checked]="rating===1" />
+          <input type="radio" [name]="supplierId" value="1" [checked]="rating===1" />
           <label title="5" (click)='checkRating(1)'>1</label>
         </fieldset>
       </div>
