IMT-1510 || IMT-1507 - issue resolved

--- a/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
+++ b/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
@@ -7,7 +7,7 @@
       </button>
     </div>
     <div class="modal-body text-center">
-      <p class="supplier-rating-dialog__para">How much rating would you like to give supplier "Satish Kumar"</p>
+      <p class="supplier-rating-dialog__para">How much rating would you like to give supplier "{{data.supplierName}}"</p>
 
       <div class="d-flex justify-content-center supplier-ratings">
         <fieldset class="rating">
