--- a/src/assets/scss/pages/po-card.component.scss
+++ b/src/assets/scss/pages/po-card.component.scss
@@ -170,3 +170,7 @@ label:hover ~ input:checked ~ label { color: #f47721;  }
 .po-supplier-rates .rfq-rates{
     margin-left: 28px !important;
 }
+
+.mgtn12{
+    margin-top: -12px;
+}
