--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -419,3 +419,10 @@ ngx-mat-drp-picker-overlay {
 .align-center {
   align-items: center;
 }
+
+.mat-list-content-padding {
+  .mat-list-item-content {
+    padding-right: 0px !important;
+    padding-left: 0px !important ;
+  }
+}
