--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -54,4 +54,95 @@
 
 div.limited-character.bom {
   max-width: 264px;
+  a{
+    font-size: 12px;
+  }
+}
+
+.orange-text{
+  color: #f47721;
+}
+
+.add-edit-image{
+  a{
+    font-size: 13px;
+  }
+}
+
+.images-lists{
+  position: relative;
+  .attached-image {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #828282;
+    height: 45px;
+    width: 45px;
+    -webkit-box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    -moz-box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    position: absolute;
+    background-color: #fff;
+    cursor: pointer;
+
+    &:first-child{
+      z-index: 0;
+      top: -30px;
+      left: 10px;
+    }
+
+    &:nth-child(2){
+      left: 16px;
+      z-index: 1;
+      top: -24px;
+    }
+
+    &:nth-child(3){
+      z-index: 2;
+      left: 23px;
+      top: -17px;
+    }
+  }
+}
+
+.view-image-modal .mat-dialog-container{
+  padding: 0 24px !important;
+}
+
+.view-image-dialog.mat-dialog-content {
+  padding: 0;
+  .modal-content{
+    border: none;
+  }
+  .modal-body{
+    padding: 0;
+  }
+
+  button.close{
+    position: absolute;
+    right: 10px;
+    z-index: 99;
+    opacity: 1;
+    font-size: 50px;
+    font-weight: 100;
+    color: #f47721;
+    text-shadow: none;
+  }
+
+  .carousel-indicators{
+    display: none;
+  }
+}
+
+.upload-image-info{
+  width: 95%;
+}
+
+.image-info{
+  .thumbnail-img{
+    width: 25px;
+    height: 25px;
+    object-fit: cover;
+    border-radius: 2px;
+  }
 }
