--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -82,7 +82,7 @@
                         </div>
                         <mat-select-trigger>
                           <span
-                            ><img class="width-45-px p-r-10" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                            ><img class="width-35-px p-r-10" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                             <span class="p-r-5">{{ selectedCountry && selectedCountry.countryCode }}</span>
                             <span>{{ selectedCountry && selectedCountry.callingCode }}</span>
                           </span>
@@ -117,6 +117,12 @@
                 </mat-form-field>
                 <mat-error *ngIf="userInfoForm.controls['orgPincode'].errors?.max && userInfoForm.controls['orgPincode'].touched">
                   maximum characters allowed is 6
+                </mat-error>
+                <mat-error *ngIf="userInfoForm.controls['orgPincode'].errors?.pincodeInvalid && userInfoForm.controls['orgPincode'].touched">
+                  Enter valid pincode
+                </mat-error>
+                <mat-error *ngIf="!validPincode && userInfoForm.controls['orgPincode'].touched">
+                  Enter Correct pincode
                 </mat-error>
                 <small *ngIf="userInfoForm.controls['orgPincode'].errors?.maxlength && userInfoForm.controls['orgPincode'].touched" class="signupForm-error-msg"></small>
                 <mat-form-field class="border-select w-100" *ngIf="users.roleName != 'l3'">
