--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -19,15 +19,15 @@ dd
             <span class="main-color p-l-5">Create</span>
           </mat-label>
           <mat-select class="hide-select-arrow">
-            <mat-optgroup class="option-select-height" label="Create GRN">
+            <!-- <mat-optgroup class="option-select-height" label="Create GRN">
               <mat-option (click)="openGrnDialog()" class="height-2-em" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded'">
                 Via System
               </mat-option>
               <mat-option class="height-2-em" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded'">
                 Via Excel
               </mat-option>
-            </mat-optgroup>
-            <mat-optgroup class="option-select-height" label="Other Actions">
+            </mat-optgroup> -->
+            <mat-optgroup class="option-select-height" label="Actions">
               <mat-option class="height-2-em" (click)="createRfq()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded'">
                 Create RFQ
               </mat-option>
