--- a/src/app/shared/dialogs/upload-image/upload-image.component.html
+++ b/src/app/shared/dialogs/upload-image/upload-image.component.html
@@ -11,6 +11,42 @@
       <div class="row">
         <div class="col-md-6">
 
+          <mat-card class="width100Percent radius-10 p-t-10">
+            <mat-card-header class="upload-documents-mat-header">
+              <span class="text-semi-bold margin-auto">
+                <app-upload #uploadRef [documentListLength]="documentListLength" [filesRemoved]="filesRemoved"
+                  (onFileUpdate)="fileUpdate($event)"> </app-upload>
+              </span>
+            </mat-card-header>
+
+            <mat-card-content>
+              <!-- View files -->
+              <mat-list class="pt-10">
+                <span>
+                  <mat-list-item class="row height-100" *ngFor="let file of documentList; let i = index">
+                    <!-- <mat-icon>file_copy</mat-icon> -->
+                    <div class="col-x-9">
+                      <img class="file-icon" src="../../../../assets/images/file-doc.png" />
+                      <span class="overflow-anywhere">file name</span>
+                    </div>
+                    <div class="col-xs-3">
+                      <span class="show-download">
+                        <a type="button" target="_blank" class="width-40 p-r-5" [href]="file.Url" mat-icon-button>
+                          <i class="material-icons">
+                            remove_red_eye
+                          </i>
+                        </a>
+                        <!-- <button type="button" class="width-21" (click)="removeFile(i)" mat-icon-button>
+                          <mat-icon class="font-size-16">cancel</mat-icon>
+                        </button> -->
+                      </span>
+                    </div>
+                  </mat-list-item>
+                </span>
+              </mat-list>
+            </mat-card-content>
+          </mat-card>
+
         </div>
 
         <div class="col-md-6">
@@ -21,7 +57,7 @@
             </div>
 
             <div class="image-actions d-flex align-items-center">
-              <i class="fa fa-trash fa-lg orange-text"></i>
+              <i class="fa fa-trash fa-lg orange-text mr-2"></i>
               <i class="fa fa-download fa-lg orange-text"></i>
             </div>
 
