--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -146,3 +146,9 @@ div.limited-character.bom {
     border-radius: 2px;
   }
 }
+
+.image-actions{
+  .fa{
+    text-decoration: none !important;
+  }
+}
