whatsapp icon will display only to indian users

--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -11,7 +11,7 @@
         <div>
           <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon" />
         </div>
-        <div class="whatsapp-icon-number">
+        <div class="whatsapp-icon-number" *ngIf="isWhatsappIconDisplay === '+91'">
           +91 8512060007
         </div>
       </div>
