--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -12,7 +12,7 @@
             </mat-form-field>
           </div>
           <div class="col-xs-6 text-right">
-            <button mat-raised-button class="main-color main-background-color main-button color-white" (click)="openAddMaterial()">+Add Material</button>
+            <button mat-raised-button class="main-background-color main-button color-white" (click)="openAddMaterial()">+Add Material</button>
           </div>
         </div>
         <!-- <div class="col-sm-12 col-md-12 choose-trades">
