--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -32,6 +32,7 @@
 @import "./pages/paymentRecord.scss";
 @import "./pages/ngx-date.scss";
 @import "./pages/selectCurrency.scss";
+@import "./pages/subscriptions.scss";
 
 
 ::ng-deep .mat-horizontal-stepper-header {
